--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -36,7 +36,7 @@
     <color name="call_log_voicemail_highlight_color">#33b5e5</color>
 
     <!-- Tint of the recent card phone icon -->
-    <color name="recent_call_log_item_phone_icon_tint">#000000</color>
+    <color name="recent_call_log_item_phone_icon_tint">#b2b2b2</color>
     <color name="call_log_extras_text_color">#0277bd</color>
 
     <!--
